# HiveECS

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  coding-standard.md
.github/workflows/: main.yml
HiveECS/: CMakeLists.txt
HiveECS/src/: hvpch.h
HiveECS/src/ecs/: Ecs.cpp  Ecs.h  HiveECS.h  QueryBuilder.cpp  QueryBuilder.h  Query_Builder.cpp  Query_Builder.h  Registry.cpp  Registry.h
HiveECS/src/ecs/component/: IComponent.cpp  IComponent.h  TagComponent.cpp  TagComponent.h
HiveECS/src/ecs/system/: System.cpp  System.h  System_Manager.cpp  System_Manager.h
Sandbox/: CMakeLists.txt  Sandbox.md  main.cpp
Test/: CMakeLists.txt  MainTest.cpp
Test/HiveECS/: ECSTest.cpp
